# chatx

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
component/data_loader/: firecrawl.py
component/model_runtime/model_engine/: factory.py
component/model_runtime/model_engine/base/: base_model.py  llm_model.py  rerank_mode.py  text_embedding_mode.py
component/model_runtime/model_engine/hugging_face/: text_embedding.py
component/model_runtime/model_engine/ollama/: llm.py
component/model_runtime/model_engine/tongyi/: llm.py  text_embedding.py
component/model_runtime/schema/: chat.py  enums.py
component/prompt/: prompt.py
component/vector_store/: pg_vector.py
config/: config.py
migrations/: env.py
migrations/versions/: e506f53a991b_init_project.py
model/chat/: chat.py
model/embedding/: embedding.py
prompt/: prompt.py
server/: __init__.py  apiserver.py
server/controller/: controller.py
server/data_object/: chat_history.py  history.py
server/enums/: response.py
server/mapper/: chat_history.py
server/router/: router.py
server/service/: service.py
server/service/impl/: service_impl.py
server/util/: helper.py
vector_store/: pg_vector.py
web/: web_ui.py
